Fix margins on smaller screen resolutions.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -63,7 +63,7 @@ input:-webkit-autofill {
   h1 {
     margin-top: 10px;
     margin-left: 20px;
-    font-size: 1.2em;
+    font-size: 1.3em;
   }
 
   .info {
@@ -77,7 +77,7 @@ input:-webkit-autofill {
     list-style-image: url("./../resources/western-star-clip-art-clipart-red-star-d2db-18px.png");
     margin-top: 10px;
     margin-bottom: 10px;
-    font-size: 1.1em;
+    font-size: 0.9em;
     font-weight: bold;
   }
 
@@ -115,11 +115,30 @@ input:-webkit-autofill {
   }
 
   .flex .route-map {
-    align-self: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 20px 0px 40px 0px;
   }
 
   .long-input {
-    width: 175px;
+    width: 250px;
+  }
+
+  .flex .user-signup {
+    display: flex;
+    flex-direction: column;
+    margin: 30px 0px 0px 20px;
+  }
+
+  .flex .user-signup button {
+    align-items: flex-start;
+  }
+
+  .user-signup {
+    font-size: 0.9em !important;
+    font-weight: bold;
+    color: #fff;
   }
 }
 
@@ -132,7 +151,7 @@ input:-webkit-autofill {
   h1 {
     margin-top: 10px;
     margin-left: 20px;
-    font-size: 1.2em;
+    font-size: 1.5em;
   }
 
   .info {
@@ -185,10 +204,21 @@ input:-webkit-autofill {
 
   .flex .route-map {
     align-self: center;
+    margin: 0px 0px 40px 0px;
+  }
+
+  .flex .user-signup {
+    display: flex;
+    flex-direction: row;
+    margin: 30px 0px 20px 20px;
+  }
+
+  .flex .user-signup button {
+    align-items: flex-start;
   }
 
   .long-input {
-    width: 250px;
+    width: 325px;
   }
 }
 
